--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-youtube": "^10.1.0",
+    "sass": "^1.69.5",
     "three": "^0.157.0"
   },
   "devDependencies": {
