--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@react-three/drei": "^9.88.2",
     "@react-three/fiber": "^8.14.5",
     "@types/three": "^0.157.0",
+    "@uiw/react-markdown-editor": "^6.0.0",
     "glslify": "^7.1.1",
     "lamina": "^1.1.23",
     "maath": "^0.10.4",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-scripts": "^5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "react-youtube": "^10.1.0",
     "sass": "^1.69.5",
     "three": "^0.157.0"
