--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-responsive-carousel": "^3.2.23",
+    "react-responsive-modal": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-simplemde-editor": "^5.2.0",
     "react-youtube": "^10.1.0",
