--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/three": "^0.157.0",
     "@uiw/react-markdown-editor": "^6.0.0",
     "glslify": "^7.1.1",
+    "gsap": "npm:gsap-trial@^3.12.4",
     "lamina": "^1.1.23",
     "maath": "^0.10.4",
     "next": "^13.5.4",
@@ -29,6 +30,7 @@
     "react-responsive-modal": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-simplemde-editor": "^5.2.0",
+    "react-transition-group": "^4.4.5",
     "react-youtube": "^10.1.0",
     "sass": "^1.69.5",
     "three": "^0.157.0"
