--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-transition-group": "^4.4.5",
     "react-youtube": "^10.1.0",
     "sass": "^1.69.5",
+    "styled-components": "^6.1.8",
     "three": "^0.157.0"
   },
   "devDependencies": {
